...
            return CircularProgressIndicator();
          }

          String topicName = snapshot.data["name"];

          switch (topicName) {
            case "Machine Learning":
              return Icon(Icons.code);
              break;
            case "Network Managment":
              return Icon(Icons.network_cell);
              break;
            case "Android Application Development":
...
        SizedBox(
          height: 16,
        ),
        Align(
          alignment: Alignment.center,
          child: ElevatedButton(
            key: Key("MyProjectsDeleteProjectButton"),
            child: Text(
              "Delete Project",
              style: GoogleFonts.lato().copyWith(
                  fontSize: 22,
                  color: currentTheme.isDark ? rosewood : Colors.white),
            ),
...
                                primary: Colors.grey),
                          ),
                          SizedBox(
                            width: 16,
                          ),
                          ElevatedButton(
                            key: Key("MyProjectsDeleteProjectButtonConfirm"),
                            onPressed: () {
                              confirm = true;
                              Navigator.pop(context);
                            },
                            child: Text(
                              "Delete Project",
...
  }

  Widget _buildFloatingActionButton() {
    return Directionality(
        textDirection: TextDirection.rtl,
        child: FloatingActionButton.extended(
          key: Key("CreateProjectButton"),
          onPressed: () {
            widget.presenter.handlePageChange("projectTitle");
          },
          icon: Icon(
            Icons.add,
            color: rosewood,
          ),
          label: Text("Create Project",
              style:
                  GoogleFonts.lato().copyWith(fontSize: 20, color: rosewood)),
          backgroundColor: currentTheme.isDark ? mediumChampagne : indianYellow,
        ));
  }

...
                GoogleFonts.lato().copyWith(fontSize: 28, color: indianYellow),
          ),
          SizedBox(
            height: 16,
          ),
          TextField(
            key: Key("CreateProjectTitleInput"),
            controller: widget.presenter.titleController,
            decoration: InputDecoration(
                enabledBorder: OutlineInputBorder(
                    borderSide: BorderSide(
                        color: currentTheme.isDark
                            ? mediumChampagne
...
                hintText: "Project Title",
                hintStyle: GoogleFonts.lato().copyWith(fontSize: 24)),
          ),
          SizedBox(
            height: 16,
          ),
          _buildButton("Next", () {
            widget.presenter.handlePageChange("projectDescription");
          }, rosewood, currentTheme.isDark ? mediumChampagne : indianYellow)
        ],
      ),
    );
  }
...
                GoogleFonts.lato().copyWith(fontSize: 28, color: indianYellow),
          ),
          SizedBox(
            height: 16,
          ),
          TextField(
            key: Key("CreateProjectDescriptionInput"),
            controller: widget.presenter.descriptionController,
            minLines: 5,
            maxLines: 20,
            decoration: InputDecoration(
                enabledBorder: OutlineInputBorder(
                    borderSide: BorderSide(
...
          SizedBox(
            height: 16,
          ),
          Row(
            mainAxisAlignment: MainAxisAlignment.end,
            children: [
              _buildButton("Back", () {
                widget.presenter.handlePageChange("projectTitle");
              }, Colors.white, deepSpaceSparkle),
              SizedBox(
                width: 16,
              ),
              _buildButton("Next", () {
...
                GoogleFonts.lato().copyWith(fontSize: 28, color: indianYellow),
          ),
          SizedBox(
            height: 16,
          ),
          TextField(
            key: Key("MyProjectsMaxClaimsInput"),
            controller: widget.presenter.maxClaimsController,
            decoration: InputDecoration(
                enabledBorder: OutlineInputBorder(
                    borderSide: BorderSide(
                        color: currentTheme.isDark
                            ? mediumChampagne
...
      ],
    );
  }

  Widget _buildTopicGrid(BuildContext context) {
    return SizedBox(
      key: Key("CreateProjectTopicGrid"),
      height: MediaQuery.of(context).size.height * 0.5,
      child: ClipRRect(
          clipBehavior: Clip.antiAliasWithSaveLayer,
          borderRadius: BorderRadius.all(Radius.circular(20)),
          child: GridView.builder(
            gridDelegate:
...
