...
              Padding(
                padding: EdgeInsets.fromLTRB(10.0, 10.0, 10.0, 5.0),
                child: Row(
                  children: [
                    Expanded(
                      child: TextField(
                        key: Key("ConversationMessageInput"),
                        decoration: InputDecoration(
                            labelText: "Type your message",
                            border: OutlineInputBorder(
                                borderRadius:
                                    BorderRadius.all(Radius.circular(10)))),
                        controller: widget.presenter.messageController,
                      ),
                    ),
                    SizedBox(
                      width: 4,
                    ),
                    ElevatedButton(
                      key: Key("ConversationSendButton"),
                      onPressed: () {
                        widget.presenter.sendMessage(snapshot);
                      },
                      style: ElevatedButton.styleFrom(
                          primary: currentTheme.isDark
                              ? mediumChampagne
...
